# black-hat-rust-programs

./: .gitignore  README.md
crawler/: Cargo.toml
crawler/src/: crawler.rs  error.rs  main.rs
crawler/src/spiders/: cvedetails.rs  github.rs  mod.rs
sha1_cracker/src/: main.rs
snippets/: Cargo.toml
snippets/src/: chapter04.rs  chapter04_dispatch.rs  main.rs
web-scanner/: Cargo.toml
web-scanner/src/: error.rs  ports.rs  subdomains.rs
web_scanner_async/: Cargo.toml
web_scanner_async/src/: error.rs  main.rs  subdomains.rs
web_scanner_modules/: Cargo.toml
web_scanner_modules/src/: cli.rs  dns.rs  error.rs  main.rs  ports.rs
web_scanner_modules/src/modules/: mod.rs
web_scanner_modules/src/modules/http/: cve_2017_9506.rs  cve_2018_7600.rs  directory_listing_disclosure.rs  dotenv_disclosure.rs  git_config_disclosure.rs  git_directory_disclosure.rs  git_head_disclosure.rs  mod.rs
web_scanner_modules/src/modules/subdomains/: crtsh.rs
