[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
thiserror = "1.0.30"
anyhow = "1.0.55"
reqwest = { version = "0.11.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.136", features = ["derive"] }
trust-dns-resolver = "0.21.1"
futures = "0.3.21"
tokio-stream = "0.1.8"
log = "0.4.14"
env_logger = "0.9.0"
async-trait = "0.1.52"
clap = "3.1.3"
regex = "1.5.4"
url = "2.2.2"
select = "0.6.0-alpha.1"
# fantoccini = { version = "0.18.0", default-features = false, features = ["rutstls-tls"] }
serde_json = "1.0.79"