[package]
name = "web_scanner_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
anyhow = "1.0.55"
rayon = "1.5.1"
reqwest = { version = "0.11.9", features = ["json", "blocking"] }
trust-dns-resolver = "0.21.1"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3.21"
tokio-stream = "0.1.8"